# Trump-Rally-Speeches-NLP-Chatbot

./: .gitignore  Dockerfile  LICENSE  README.md  TROUBLESHOOTING_AWS.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: build-push-docker.yml  deploy-azure.yml  deploy-docs.yml  deploy-render.yml  docs.yml  markdown-lint.yml  python-lint.yml  python-tests.yml  python-typecheck.yml  security-audit.yml
configs/: development.yaml  production.yaml  staging.yaml
data/chromadb/7919d692-764e-456e-9272-0eee8bc5cb57/: index_metadata.pickle
docs/: CHANGELOG.md  ROADMAP.md  dev-guide.md  faq.md  index.md
docs/copilot-artifacts/: 00-project-overview.md  01-rag-deep-dive.md  02-sentiment-analysis-deep-dive.md  03-topic-analysis-deep-dive.md  04-technical-architecture.md  05-llm-integration.md  06-concepts-glossary.md
docs/development/: ci-local-testing.md  code-style.md  formatting.md  linting.md  logging.md  markdown-linting.md  security.md  testing.md
docs/guides/: ci-local-testing.md  deployment.md  documentation.md  quickstart.md  troubleshooting_Azure.md
docs/howto/: testing.md  topic-extraction.md
docs/reference/: architecture.md  configuration.md  entity-analytics.md  faq.md  qa-system.md  sentiment-analysis.md  topic-analysis.md  topic-extraction.md
scripts/: download_models.py  migrate_rag_embeddings.py  run.py  test_semantic_chunking.py
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py  routes_chatbot.py  routes_health.py  routes_nlp.py
src/config/: settings.py
src/core/: __init__.py  constants.py  logging_config.py
src/models/: __init__.py  schemas.py
src/services/: __init__.py  nlp_service.py  rag_service.py  sentiment_service.py  topic_service.py
src/services/llm/: anthropic.py  base.py  factory.py  gemini.py  openai.py
src/services/rag/: __init__.py  confidence.py  document_loader.py  entity_analyzer.py  guardrails.py  models.py  query_rewriter.py  search_engine.py
src/speech_nlp/: __init__.py  app.py  exceptions.py  security.py
src/speech_nlp/api/: __init__.py  analysis.py  chatbot.py  dependencies.py  health.py
src/speech_nlp/config/: __init__.py  settings.py
src/speech_nlp/schemas/: __init__.py  requests.py  responses.py
src/speech_nlp/services/: __init__.py
src/speech_nlp/services/analysis/: __init__.py  sentiment.py  text.py  topics.py
src/speech_nlp/services/cache/: __init__.py  base.py  redis.py
src/speech_nlp/services/llm/: __init__.py  anthropic.py  factory.py  gemini.py  openai.py
src/speech_nlp/services/rag/: __init__.py  chunking.py  confidence.py  entities.py  guardrails.py  models.py  rewriter.py  search.py  service.py
src/speech_nlp/templates/: index.html
src/speech_nlp/utils/: __init__.py  io.py
src/templates/: index.html
src/utils/: __init__.py  embeddings.py  formatters.py  io_helpers.py  text_preprocessing.py
tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_confidence.py  test_document_loader.py  test_entity_analyzer.py  test_guardrails.py  test_preprocessing.py  test_query_rewriter.py  test_rag_integration.py  test_search_engine.py  test_topic_service.py  test_utils.py
