[project]
name = "trump-speeches-nlp-chatbot"
version = "0.1.0"
description = "Production-ready NLP Chatbot API with RAG for sentiment analysis, Q&A, topic extraction, and text analysis. Includes demo dataset of political speeches."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.15"
keywords = [
    "nlp",
    "natural-language-processing",
    "sentiment-analysis",
    "text-analysis",
    "fastapi",
    "transformers",
    "bert",
    "machine-learning",
    "data-science",
    "rest-api"
]
authors = [
    {name = "Kristiyan Bonev", email = "k.s.bonev@gmail.com"}
]
maintainers = [
    {name = "Kristiyan Bonev", email = "k.s.bonev@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent",
]
dependencies = [
    # PyTorch (CPU-only) - 2.6.0 is minimum version due to CVE-2025-32434
    "torch==2.6.0",
    # "torch==2.9.0",

    # Core API Framework
    "fastapi (>=0.116.0,<0.117.0)",
    "uvicorn[standard] (>=0.32.0,<0.33.0)",
    "python-multipart (>=0.0.18,<0.0.19)",
    "httpx (>=0.28.0,<0.29.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    
    # RAG & Vector Search
    "chromadb (>=0.5.0,<0.6.0)",
    "sentence-transformers (>=3.3.0,<4.0.0)",
    "langchain (>=0.3.0,<0.4.0)",
    "langchain-community (>=0.3.0,<0.4.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    
    # LLM Integration - Only Gemini by default
    "google-generativeai (>=0.8.0,<0.9.0)",
    
    # NLP & ML (Core)
    "transformers (>=4.57.1,<5.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "huggingface-hub (>=0.36.0,<0.37.0)",
    
    # Data Processing - NumPy <2 for compatibility with PyTorch 2.6 CPU builds
    "numpy (>=1.26.0,<2.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    # "scipy (>=1.14.0,<2.0.0)",
    # "tqdm (>=4.67.1,<5.0.0)",
    
    # Security
    "certifi (>=2025.10.5,<2026.0.0)"
]

# Optional dependency groups
[dependency-groups]
# Development tools (testing, linting, formatting)
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.6.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    "pip-audit>=2.9.0,<3.0.0",
    "bandit>=1.8.0,<2.0.0",
    "pymarkdownlnt>=0.9.17,<1.0.0",
    # "pre-commit>=4.0.0,<5.0.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0"
]

# LLM Providers (optional - install only what you need)
# By default, only Gemini is included in base dependencies
llm-openai = [
    "openai (>=1.0.0,<2.0.0)"
]

llm-anthropic = [
    "anthropic (>=0.40.0,<1.0.0)"
]

# Jupyter notebook execution (not needed for API)
notebooks = [
    "jupyterlab (>=4.4.10,<5.0.0)",
    "ipykernel (>=7.0.1,<8.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "widgetsnbextension (>=4.0.14,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "plotly (>=6.3.1,<7.0.0)"
]

# Documentation site generation
docs = [
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
    "mkdocstrings[python]>=0.27.0,<1.0.0",
    "pymdown-extensions>=10.0.0,<11.0.0",
]

# PyTorch with CUDA (massive, only for local GPU development)
# torch-gpu = [
    # "torch (>=2.9.0,<3.0.0)",
    # "torchvision (>=0.19.0,<0.20.0)",
    # "torchaudio (>=2.9.0,<3.0.0)"
# ]

# PyTorch CPU-only (for Docker/production - much smaller)
# torch-cpu = [
#     "torch (>=2.6.0,<3.0.0)"
# ]

# [project.scripts]
# ayne = "ayne.cli.main:app"

# [build-system]
# requires = ["setuptools>=68.0", "wheel"]
# build-backend = "setuptools.build_meta"

# [tool.setuptools]
# package-dir = {"" = "src"}

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["ayne*"]
# namespaces = false

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
exclude = [
    ".git",
    ".tox",
    "dist",
    "build",
    "*.egg",
    "reports",
    "site",
    ".venv",
    "venv",
    "notebooks",
    ".pytest_cache",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "D"]  # Includes docstring checks
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in argument defaults
    "B904",   # Exception chaining (use `from` for clarity)
    "D203",   # 1 blank line before class (conflicts with D211)
    "D213",   # Multi-line docstring summary second line (conflicts with D212)
    "D205",   # 1 blank line between summary and description (too strict)
    "D415",   # First line punctuation (docstrings can be phrases)
    "D102",   # Missing docstring in public method (too verbose for simple methods)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
strict_optional = false
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
# Test discovery patterns
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test paths
testpaths = ["tests"]

# Additional options
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage/html",
    "--cov-report=xml:reports/coverage/coverage.xml",
    "--cov-fail-under=60",
    # "--strict-markers",
    # "--disable-warnings",
]

# Markers for categorizing tests
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests for API endpoints",
    "slow: Tests that take longer to run",
    "requires_model: Tests that require ML model loading",
]

# Ignore directories
norecursedirs = [
    ".git",
    ".tox",
    "dist",
    "build",
    "*.egg",
    "reports",
    "site",
    ".venv",
    "venv",
    ".pytest_cache",
    "__pycache__",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/notebooks/*",
]
data_file = "reports/coverage/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "reports/coverage/html"

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"

[tool.bandit]
exclude_dirs = [
    ".venv",
    "venv",
    "notebooks",
    "site",
    ".pytest_cache",
    "__pycache__",
]
# B101: assert_used - Asserts are acceptable in test/dev code
# B104: hardcoded_bind_all_interfaces - Dev server binds are intentional (0.0.0.0 for containers)
# B108: hardcoded_tmp_directory - Temp paths are controlled
# B110: try_except_pass - Intentional silent failures in data parsing/cleanup
# B608: hardcoded_sql_expressions - DuckDB queries with parameterized values (not user input)
skips = ["B101", "B104", "B108", "B110", "B608"]

# Markdown linting
[tool.pymarkdown]
plugins.md013.enabled = false  # Disable line length check (tables/code blocks can be long)
plugins.md033.enabled = false  # Allow inline HTML (useful for badges, images)
plugins.md013.line_length = 120  # Set reasonable line length if enabled
plugins.md036.enabled = false  # Allow emphasis as pseudo-headings (common in docs)
plugins.md024.enabled = false  # Allow duplicate headings (useful for examples)
plugins.md040.enabled = false  # Don't require language for all code blocks (examples may not have)
plugins.md031.enabled = false  # Allow code blocks without surrounding blank lines (nested examples)
extensions.front-matter.enabled = true  # Support YAML front matter
extensions.tables.enabled = true  # Enable table support

